ansible/roles/monitoring/files/policy-reporter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-reporter-ui
  namespace: policy-reporter
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: policy-reporter.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: policy-reporter-ui
            port:
              number: 80
